echo/demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
spec:
  type: ClusterIP
  ports:
  - port: 55555
    name: http
  selector:
    app: echo
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echo-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: echo
        version: v1
    spec:
      containers:
      - name: echo
        image: gcr.io/istio-manlinl/echo:v0.1
        imagePullPolicy: IfNotPresent #Always
        command: ["/opt/echo"]
        args: ["-alsologtostderr"]
        ports:
        - containerPort: 55555
